src/Part3/yaml/movies-mesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: movies 
  name: movies
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies
      version : v1.0
  template:
    metadata:
      labels:
        app: movies
        version : v1.0
    spec:
      containers:
      - image: docker.io/library/movies:v1.0
        imagePullPolicy: IfNotPresent
        name: movies
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movies
  name: movies-service
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: movies
