src/Part3/yaml/demo-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - match:
    - uri:
        prefix: /v1/user
    route:
    - destination:
        host: users-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /v1/movies
    route:
    - destination:
        host: movies-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /v1/manage
    route:
    - destination:
        host: manage-service
        port:
          number: 3000
